[project]
name = "clive-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "litellm>=1.65.4.post1",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "smolagents>=1.13.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]

[tool.pytest.ini_options]
pythonpath = "."
